# megatron-sft-recipes

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: README.md  training-optimization.md
.cursor/rules/: project.mdc  training-optimization.mdc
docker/: Dockerfile  README.md  build_image.sh  entrypoint.sh  prepare.sh
docker/patches/: gemma4_loader_buffer_fix.patch
docs/: adapting-vlm-to-megatron.md  benchmark.md  benchmark_result.md  deepspeed_optimization_walkthrough.md  fsdp2_optimization_walkthrough.md  fsdp_user_guide.md  fsdp_vs_megatron_report.md  gemma4_E4B_alt_offload_log.md  gemma4_README.md  gemma4_alt_offload_strategy.md  gemma4_debug_log.md  gemma4_diy_journey.md  gemma4_optimization_plan.md  gemma4_optimization_walkthrough.md  gemma4_phase_delta_summary.md  gemma4_setup_from_scratch.md  megatron_optimization_walkthrough.md  qwen2_5_14b_benchmark_plan.md  qwen3_5_9b_benchmark_plan.md  qwen3_5_9b_failed_attempts.md  sp_offload_benchmark_report.md  sp_offload_benchmark_summary.md  v5_user_guide.md
scripts/: 01_setup_env.sh  02_convert_data.py  03_sft_qwen25_7b.sh  04_sft_gemma4_e4b.sh  05_sft_gemma4_31b.sh  06_infer.sh  07_sft_ministral3_3b.sh  08_sft_ministral3_text.sh  _common.sh
scripts/benchmark/: _inspect_model.py  analyze_torch_profile.py  bench_deepspeed.sh  bench_fsdp.sh  bench_megatron.sh  bench_swift_sp.sh  bench_swift_sp_profile.sh  bench_swift_sp_v2.sh  build_all_runs_table.py  build_fsdp_opt_summary.py  build_matrix_summary.py  compare_loss_curves.py  dcgm_scrape.py  extract_loss_curve.py  fsdp_diag.py  gpu_monitor.py  liger_gemma4_patch.py  nsys_analyze.py  nsys_classify.py  parse_swift_log.py  report.py  report_swift_sp.py  run_fsdp_opt_sweep.sh  run_sp_offload_matrix.sh  run_with_nsys.sh  swift_sft_patched.py  swift_sft_profiled.py  swift_sp_patch.py  (+1 more)
(+501 files in other folders)
