[project]
name = "megatron-sft-pipeline"
version = "0.1.0"
description = "ms-swift Megatron SFT pipeline for Qwen2.5 and Gemma 4"
readme = "README.md"
requires-python = ">=3.11,<3.13"

# 公共依赖：Mac 本地数据转换 + GPU 训练都要用
dependencies = [
    "datasets>=3.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# GPU 端才安装的训练相关依赖
#   - TE/Apex/FlashAttention 不在这里，它们由 NGC PyTorch 镜像提供
#   - 通过 `uv venv --system-site-packages` 让 venv 继承镜像预装包
gpu = [
    "ms-swift>=4.1.0",
    "mcore-bridge>=1.0.2",
    "megatron-core>=0.12,<0.17",
    "modelscope>=1.23",
    "accelerate>=0.30",
    "transformers>=4.57,<5.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
